# FreeTex

./: .gitignore  README.md  README_EN.md  config.json  demo.py  demo.yaml  main.py  main.spec  pyproject.toml  requirements.txt  test_api.py
docker/: .dockerignore  Dockerfile  docker-compose.yml  requirements.txt
docs/: index.html  script.js  style.css
images/: icon.icns
libs/: index.html
models/: README.md
qfluentwidgets/common/: config.py
resources/: .gitignore  __init__.py  app.qrc
resources/fonts/Noto_Serif_SC/: build_font.sh  info.txt
resources/mathview/: index.html
scripts/: build-macos.sh  build_with_encoding_fix.py  build_with_nuitka.py
tools/: clipboard_handler.py  fp32tofp16.py  local_processor.py  screenshot.py
unimernet/common/: config.py
